2018-12-14  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/x86/fpu/bits/mathinline.h (asinh): Remove inline
	definition.
	(acosh): Likewise.
	(atanh): Likewise.

2018-12-14  Florian Weimer  <fweimer@redhat.com>

	* manual/process.texi (Process Creation Concepts): Remove
	documentation of process (ID) lifetime.  List more process
	creation functions.  Reference Process Identification section.
	(Process Identification): Add information about process ID
	lifetime.  Describe Linux thread/task IDs.
	* manual/signal.texi (Signaling Another Process): Mention that the
	signal is always sent to the process.

2018-12-14  Gabriel F. T. Gomes  <gabriel@inconstante.eti.br>

	* misc/Makefile (tests): Remove tst-efgcvt.  Add tst-dbl-efgcvt
	and tst-ldbl-efgcvt.
	* misc/tst-efgcvt.c: Renamed to misc/tst-efgcvt-template.c.
	* misc/tst-efgcvt-template.c: Renamed from misc/tst-efgcvt.c.
	(struct testcase, efcvt_func, efcvt_r_func, ecvt_tests)
	(fcvt_tests, output_error, output_r_error, do_test): Use the
	macros defined in tst-dbl-efgcvt.c and tst-ldbl-efgcvt.c to:
	select the type of floating-point variables and arguments; to
	produce extra tests for double and conversion specifiers for
	printf; and to set the names of called functions.
	* misc/tst-dbl-efgcvt.c: New file that defines the macros used
	in tst-efgcvt-template.c.
	* misc/tst-ldbl-efgcvt.c: Likewise.

2018-12-14  Stefan Liebler  <stli@linux.ibm.com>

	* nss/Makefile (tst-nss-test3.out): New rule.

2018-12-13  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/mach/hurd/i386/init-first.c (_hurd_stack_setup): Do not
	clobber sp.

2018-12-13  fanjinke  <fanjinke@hygon.cn>

	* sysdeps/x86/cpu-features.c (init_cpu_features): Check for
	"HygonGenuine".

2018-12-13  Andreas Schwab  <schwab@suse.de>

	[BZ #23861]
	* nptl/pthread_rwlock_common.c: Reindent.  Fix typos.
	(__pthread_rwlock_rdlock_full): Update expected value for
	__readers while waiting on PTHREAD_RWLOCK_RWAITING.
	* nptl/tst-rwlock-pwn.c: New file.